opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/dblib"
dev-repo: "git+https://github.com/coq-community/dblib.git"
bug-reports: "https://github.com/coq-community/dblib/issues"
license: "GPL-3.0-only"

synopsis: "Library for de Bruijn indices in Coq"
description: """
Library with facilities for working with de Bruijn indices in Coq to
reason about capture-avoiding substitution of variables in syntax with binders."""

build: [make "-j%{jobs}%"]
run-test: [make "tests"]
install: [make "install"]
depends: [
  "coq" {(>= "8.7" & < "8.13~") | (= "dev")}
]

tags: [
  "category:Computer Science/Lambda Calculi"
  "keyword:abstract syntax"
  "keyword:binders"
  "keyword:de Bruijn indices"
  "keyword:substitution"
  "logpath:Dblib"
]
authors: [
  "François Pottier"
]
